<resources>
    <string name="app_name">Mai apliqueishon</string>
    <string name="app_1">Saludo</string>
    <string name="app_2">IMCCalculator</string>
    <string name="app_3">ToDo</string>
    <string name="btnName">PULSAME</string>
    <string name="etName">Ingresa tu nombre</string>
    <string name="text_01">ESCRIBE TU NOMBRE</string>
    <string name="btnToFirsApp">FIRST-APP</string>
    <string name="btnToSecondApp">SECOND-APP</string>
    <string name="btnToTreeApp">TREE-APP</string>

    <string name="male">Hombre</string>
    <string name="female">Mujer</string>

    <string name="img_description">Description</string>

    <string name="height">Altura</string>
    <string name="heightCm">120 CM</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>

    <string name="contentDescription">Selecciona un rango de valores entre el mínimo y el máximo</string>
    <string name="descriptionPlusWeight">Subir peso</string>
    <string name="descriptionSubstractWeight">Bajar peso</string>

</resources>